[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/enemyshooting.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemy_shot1.png" type="Texture" id=2]
[ext_resource path="res://sprites/enemy_shot2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="enemyshooting" type="KinematicBody2D"]
modulate = Color( 0.0901961, 0.603922, 0, 1 )
collision_layer = 8
collision_mask = 28
script = ExtResource( 1 )

[node name="enemyshooting_animated" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="enemy_shootincollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -11.3846, -31.1793, -22.65, -17.1602, -32.4133, 13.1311, -30.1602, 20.1407, -23.1506, 27.6509, -15.3901, 25.1475, -6.12742, 16.3856, 5.13795, 16.1352, 16.6536, 26.3992, 20.6591, 27.1502, 27.6687, 24.8972, 32.1748, 14.3828, 33.1762, 5.6236, 13.1489, -30.9262 )

[node name="enemyshooting_leftraycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -40, 0 )
collision_mask = 14

[node name="enemyshooting_rightraycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 40, 0 )
collision_mask = 14

[node name="time_shooting" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.00273, -1.62722 )
scale = Vector2( 3.57852, 3.26559 )
[connection signal="timeout" from="time_shooting" to="." method="_on_time_shooting_timeout"]
